--- a/portal.html
+++ b/portal.html
@@ -1228,6 +1228,9 @@
 
             </p>
 
+            <p style="font-size: 18px; padding: 10px; ">If your hosting provider is on a monthly basis, we'll assess the costs and either cover a portion of the cost or the cost for a year's worth of hosting.
+            </p>
+
             <br>
             <br>
           
