--- a/portal.html
+++ b/portal.html
@@ -1209,7 +1209,7 @@
 
         <hr>
 
-        <section id="contact-form">
+        <section id="domain-hosting-costs">
 
             <br>
             <br>
