--- a/contact-us.html
+++ b/contact-us.html
@@ -83,10 +83,18 @@
         margin: 0 auto;
         padding: 20px;
         border-radius: 10px;
-        background-color: #7851a9;
-        box-shadow: 0 6px 12px rgba(255, 255, 255, 0.8);
+        background-color: #7951a9;
+        
+        
 
     }
+
+
+        form:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
     input[type="text"],
     input[type="email"],
     textarea,
@@ -1036,7 +1044,8 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
+        font-family: 'Inter', sans-serif;
+
     }
 
     .navbar a {
