--- a/faq.html
+++ b/faq.html
@@ -942,7 +942,7 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
+        font-family: 'Inter', sans-serif;
     }
 
     .navbar a {
