--- a/portal.html
+++ b/portal.html
@@ -963,7 +963,8 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
+        font-family: 'Inter', sans-serif;
+
     }
 
     .navbar a {
@@ -1292,11 +1293,10 @@
                 "Your Client Portal",
                 "Welcome to WebEaze",
                 "Everything WebEaze",
-                "Easy access to support",
+                "Things made Eazy.",
                 "We got you.",
                 "Your website, your way.",
                 "Client Portal",
-
             ];
 
             const randomIndex = Math.floor(Math.random() * questions.length);
