--- a/index.html
+++ b/index.html
@@ -1141,9 +1141,41 @@
             margin: 0 auto;
         }
 
+        @keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 
-        
+.intro-element {
+  opacity: 0;
+  animation: fadeInUp 1s ease forwards;
+}
+
+#header-services h1,
+#header-services h2,
+.video-section p,
+.video-section img {
+  opacity: 0;
+  animation: fadeInUp 1s ease forwards;
+}
+
+
+#header-services h1 { animation-delay: 0.2s; }
+#header-services h2 { animation-delay: 0.4s; }
+
+.video-section img:nth-of-type(1) { animation-delay: 0.6s; }
+.video-section p:nth-of-type(1) { animation-delay: 0.8s; }
+.video-section img:nth-of-type(2) { animation-delay: 1s; }
+.video-section p:nth-of-type(3) { animation-delay: 1.2s; }
+
+
 
 </style>
 
@@ -1178,10 +1210,11 @@
         <h1 id="random-question"></h1>
 
         <br>
+        <br>
 
         <h2 id="intro-services-html-next1">
 
-            <strong>WebEaze </strong> is a small web design agency serving the USA. We're here to create meaningful websites that include dedicated support and web optimization, all for one low price. No hourly rates, no gimmicks.
+            At WebEaze, we design custom, heartfelt websites with dedicated support and smart optimization—all for one low price, with no hourly rates or gimmicks.
         </h2>
 
 
@@ -1237,14 +1270,15 @@
 
         
 
-            <p id="intro-services-html-next2">Elegant and Effortless.</p>
+            <p id="intro-services-html-next2">Design that Inspires.</p>
             <img src="images/cover-background-1.png" alt="Cover Background">
             <br>
-            <p id="intro-services-html-next2">Affordable.</p>
+            <p id="intro-services-html-next2">Priced Right for You.</p>
             <br>
             <img src="images/cover-background-3.png" alt="Cover Background">
             <br>
-            <p id="intro-services-html-next2">Personalized Support. </p>
+            <p id="intro-services-html-next2">We're With You Every Step. </p>
+
             <br>
             <br>
 
