--- a/index.html
+++ b/index.html
@@ -1506,9 +1506,16 @@
 
 
             <h1 id="setup-packages-heading"><strong>Choose your package</strong> </h1>
+
+            <br>
             <p id="intro-services-html-next2">
-                One-time payment. All packages include a free consultation and 12 months of support for improvements and updates.
+                One price. No hidden fees. No hourly rates. 
+                <br>
+                All packages include 12 months of ongoing support and maintenance.
             </p>
+
+            <br>
+
 
      
 
