--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
             opacity: 0;
             overflow: hidden;
             color: white;
+            text-align: left;
         }
 
 
@@ -1506,18 +1507,9 @@
 
 
             <h1 id="setup-packages-heading"><strong>Choose your package</strong> </h1>
-
-            <br>
             <p id="intro-services-html-next2">
-                One price. No hidden fees. No hourly rates. 
-                <br>
-                All packages include 12 months of ongoing support and maintenance.
+                One price. No hidden fees or hourly rates. 
             </p>
-
-            <br>
-
-
-     
 
             <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
 
