--- a/faq.html
+++ b/faq.html
@@ -321,6 +321,7 @@
             opacity: 0;
             overflow: hidden;
             color: white;
+            text-align: left; 
         }
 
 
@@ -456,6 +457,7 @@
             transition: background-color 0.3s;
             margin-top: 20px;
             display: inline-block;
+            font-size: 18px; 
         }
 
 
