--- a/portal.html
+++ b/portal.html
@@ -1055,8 +1055,23 @@
 
 </style>
 
+<header style="background-color: #eed2026d !important;" class="page-website-setup-header">
+
+    <br>
+    <br>
+    <br>
+
+
+    <p style="color: white; font-size: 15px"><strong>Notice</strong>: From 3/6/25 — 3/16/25, we'll be away from the desk. We will continue working on websites at a lower capacity during this time. We'll respond to your requests as soon as we return. If you require immediate assistance, <a href="mailto:joinvillebilly@gmail.com"><strong>email us</strong></a>. Thank you for your understanding. </p>
+     </p>
+
+</header>
+
 
 <body class="page-website-setup">
+
+
+
 
     
 
@@ -1065,10 +1080,10 @@
 
         <!-- <iframe src="status-snippet.html" style="width: 100%; border: none; height: auto; display: block; padding: 0; margin: 0; margin-top: 20px; color: yellow;" onload="this.style.height=this.contentWindow.document.body.scrollHeight + 'px';"></iframe> -->
 
-        <br>
+        <!-- <br>
  
         <br>
-        <br>
+        <br> -->
 
     
 
