--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,8 @@
         <br>
 
 
-        <p style="color: white; font-size: 15px"><strong>Have an existing website?</strong></strong> Lock in a 15% OFF refresh with code <u>REFRESH15</u> toward any package to finish February strong. Ends 2/28/25.</p>
+        <p style="color: white; font-size: 15px"><strong>Have an existing website?</strong></strong> Lock in a 15% OFF refresh with our Growth and Elite packages using code <u>REFRESH15</u> to finish February strong. Ends 2/28/25.</p>
+
 
     </header>
 
