Updates to margin on mobile

--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,7 @@
 
             .card {
                 flex: 1 1 100%; 
+                margin: 0 25px; 
             }
 
             .navbar-brand img {
