Updates to link - Added About page

--- a/site-map.html
+++ b/site-map.html
@@ -1181,7 +1181,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="https://billyjoinville.me/" target="_blank">About Us</a>
+                  <a class="nav-link" href="about.html" target="_blank">About Us</a>
                 </li>
 
                 <li class="nav-item">
@@ -1211,6 +1211,7 @@
                     webeaze.io
                 </h2>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html#setup-packages-heading">Pricing</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
                 <li><a href="portal.html">Client Portal</a></li>
@@ -1226,7 +1227,7 @@
                         External Links
                     </h2>
 
-                    <li><a href="https://billyjoinville.me/" target="_blank">About Us</a></li>
+                    <li><a href="https://billyjoinville.me/" target="_blank">Billy Joinville's website</a></li>
                     <li><a href="https://webeaze.statuspage.io/" target="_blank">Service Status</a></li>
                     <li><a href="https://billyjoinville.me/terms" target="_blank">Terms & Privacy Policy</a></li>
 
