--- a/contact-us.html
+++ b/contact-us.html
@@ -1288,7 +1288,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="https://billyjoinville.me/">About Us</a>
+                  <a class="nav-link" href="about.html">About Us</a>
                 </li>
 
                 <li class="nav-item">
@@ -1327,6 +1327,7 @@
                     <option value="TOS Privacy Policy">TOS & Privacy Policy Inquiry</option>
                 </select>
             </label>
+
             <label>
                 How can we help: *
                 <textarea name="message" required></textarea>
