--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1202,7 +1202,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="https://billyjoinville.me/" target="_blank">About Us</a>
+                  <a class="nav-link" href="about.html" target="_blank">About Us</a>
                 </li>
 
                 <li class="nav-item">
