Updated nav link

--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="https://billyjoinville.me/">About Us</a>
+                  <a class="nav-link" href="about.html">About Us</a>
                 </li>
 
                 <li class="nav-item">
