updated about page

--- a/about.html
+++ b/about.html
@@ -1175,7 +1175,7 @@
         <br>
         <br>
 
-        <p id="intro-services-html-next2">To do this, we offer three simple packages that are designed to meet your needs. We include dedicated support with all of our pacxkages and a free consultation. </p>
+        <p id="intro-services-html-next2">To do this, we offer three simple packages that are designed to meet your needs. We include a free consultation and 12 months of dedicated support with all of our packages. </p>
 
         <br>
         <br>
