--- a/contact-us.html
+++ b/contact-us.html
@@ -21,7 +21,7 @@
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta property="og:url" content="https://www.webeaze.io">
+    <meta property="og:url" content="https://www.webeaze.io/contact-us">
     <meta property="og:image" content="images/favicon.png">
 
     <meta name="twitter:card" content="images/favicon.png">
