--- a/site-map.html
+++ b/site-map.html
@@ -1214,6 +1214,7 @@
             <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html#setup-packages-heading">Pricing</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="consultation.html">Elite Package Quote</a>
                 <li><a href="portal.html">Client Portal</a></li>
                 <li><a href="faq.html">FAQ's</a></li>
                 
