--- a/consultation.html
+++ b/consultation.html
@@ -1275,7 +1275,7 @@
             
             <br> 
             <br> 
-            Let us know your website website goals, anticipated budget, and a link to your website (if you have one) so we can provide you with an accurate quote.
+            Let us know your website website goals, anticipated budget, and a link to your website (if you have one) so we can provide you with an accurate quote. 
 
             <br>
             <br>
@@ -1326,6 +1326,12 @@
  
 
         <form action="https://formspree.io/f/mnnjepdw" method="POST">
+
+            <p style="font-size: 15px; ">Fields required are marked with an asterisk (*).</p>
+
+            <br>
+            <br>
+
             <label>
                 Name: *
                 <input type="text" name="name" required>
