--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1254,7 +1254,15 @@
         <br>
 
         <strong>Unfinished Work</strong>: Rarely, WebEaze may contact you in regards to your website request in the event that we are unable to fulfill it. This doesn't grant you a refund. We strongly recommend that you <a href="https://calendly.com/webeaze/free-consultation"><strong>schedule a consultation with us</strong></a> before making a purchase to decide if we're a good fit for your website needs. Funds paid are significantly used to cover the costs of the services, and the time used to research, plan, and deploy your website.
+        
+
+        <br>
+        <br>
+
+        <strong>Package Upgrades</strong>: You may upgrade your package within the first 30 days of purchase. You will be responsible for the difference in price between the two packages. No refunds will be issued for downgrades.
+
         </p>
+
 
         <p id="discount-notice" style="text-align: left; font-size: 20px; color: white;">If you have any questions regarding our Refund Policy, please <strong><a href="contact-us.html">contact us</a></strong> and we will be happy to help.
         </p>
