--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,8 @@
 .video-section p:nth-of-type(1) { animation-delay: 0.8s; }
 .video-section img:nth-of-type(2) { animation-delay: 1s; }
 .video-section p:nth-of-type(3) { animation-delay: 1.2s; }
+#offer-header p { animation-delay: 0.2s; }
+
 
 
 
@@ -1187,10 +1189,10 @@
 
         <br>
         <br>
-        <br>
 
 
-        <p style="color: black; font-size: 14px;"><strong>Don't Rely on Luck! </strong>Get a stunning website & 15% OFF any package using code <u>STPATTY15</u> at checkout. Offer ends March 17th.</p>
+
+        <p id="offer-header" style="color: black; font-size: 14px;"><strong>Don't Rely on Luck! </strong>Get a stunning website & 15% OFF any package using code <u>STPATTY15</u> at checkout. Offer ends March 17th.</p>
     </header>
 
     
