--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
 
 <body class="page-website-setup">
 
-    <header style="background-color: #99deb9" class="page-website-setup-header">
+    <header style="background-color: #99deb9; margin-bottom: -40px;">
 
         <br>
         <br>
