--- a/consultation.html
+++ b/consultation.html
@@ -1279,6 +1279,7 @@
 
             <br>
             <br>
+
         </h2>
 
         <br>
@@ -1356,13 +1357,14 @@
             </label>
 
             <label>
-                What is your budget? *
-                <input type="text" name="budget" placeholder="eg. $1,500 - $2,000">
+                Website Goals: *
+                <textarea name="website-goals" placeholder="eg. We want a website that showcases our products and services. We'd like an online store, with a testimonials page and a contact page where customers can reach out to us. 
+                "></textarea>
             </label>
 
             <label>
-                Website Goals: *
-                <textarea name="website-goals" placeholder="eg. We want a website that showcases our products and services."></textarea>
+                What is your budget? *
+                <input type="text" name="budget" placeholder="eg. $1,500 - $2,000">
             </label>
 
             <label>
