--- a/portal.html
+++ b/portal.html
@@ -1098,6 +1098,11 @@
             
             <br>
             Bookmark this page for easy access to this client portal. Here, you can request changes to your website, schedule a live session, and more.
+
+            <br>
+            <br>
+
+            If you didn't schedule a consultation with us prior to purchasing a package, please schedule a <strong>Live Session</strong> or <strong>Website Request</strong> below, so we can get started on your website.
         </h2>
 
 
@@ -1162,7 +1167,7 @@
             <h1><strong>New Website?</strong></h1>
 
 
-            <p style="padding: 40px; font-size: 20px ;">Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>support@webeaze.io</strong>.</p>
+            <p style="padding: 40px; font-size: 20px ;">For those who don't have a live website: Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>support@webeaze.io</strong>.</p>
 
 
 
@@ -1263,7 +1268,7 @@
 
 
             <p id="domain-hosting-costs-disclaimer">If your hosting provider handles their subscriptions on a monthly basis, we'll cover the cost for three (3) months. If your hosting provider handles their subscriptions on a yearly basis, we'll cover the cost for one (1) year.</p>
-            </p>
+        
 
             <br>
             <br>
