Updated Portal and Index

--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,10 @@
 
 
 
-        <p id="offer-header" style="color: black; font-size: 14px;"><strong>Don't Rely on Luck! </strong>Get a stunning website & 15% OFF any package using code <u>STPATTY15</u> at checkout. Offer ends March 17th.</p>
+        <p id="offer-header" style="color: black; font-size: 14px;"><strong>Don't Rely on Luck! 
+
+            <br>
+        </strong>Get a stunning website & 15% OFF any package using code <u>STPATTY15</u> at checkout. Offer ends March 17th.</p>
     </header>
 
     
