Updated Menu and Banner

--- a/index.html
+++ b/index.html
@@ -1185,17 +1185,19 @@
 
 <body class="page-website-setup">
 
-    <header style="background-color: #99deb9; margin-bottom: -40px;">
+    <header style="background-color: #1e6f44; margin-bottom: -40px;">
 
         <br>
         <br>
 
 
 
-        <p id="offer-header" style="color: black; font-size: 14px;"><strong>Don't Rely on Luck! 
+        <p id="offer-header" style="color: white; font-size: 14px;"><strong>Don't Rely on Luck! 🍀</strong>
 
             <br>
-        </strong>Get a stunning website & 15% OFF any package using code <u>STPATTY15</u> at checkout. Offer ends March 17th.</p>
+       Get a stunning website & 15% OFF any of our packages using code <u>STPATTY15</u> at checkout. 
+        <br>
+        Offer ends March 17th.</p>
     </header>
 
     
@@ -1241,6 +1243,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About Us</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="portal.html">Client Portal</a>
+                </li>  
 
                 <li class="nav-item">
                   <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
