--- a/portal.html
+++ b/portal.html
@@ -157,7 +157,7 @@
         
         body.page-website-setup {
 
-            background-color:  #5D4037 !important;
+            background-color:  #7851a9 !important;
 
             width: 100%;
             min-height: 100vh;
@@ -1101,18 +1101,21 @@
 
 
     
-    <header style="background-color: #eed2026d !important;" class="page-website-setup-header">
-
-        <br>
-        <br>
-        <br>
+    <header style="background-color: #ea10106d !important; margin-bottom: -40px; margin-top: 83px;" class="page-website-setup-header">
 
 
 
-        <p style="color: white; font-size: 15px"><strong>Important Notice</strong>
+        <p style="color: white; font-size: 15px;"><strong>NOTICE</strong>
             <br>
-             We're away from the desk between <strong>March 6  - March 16, 2025</strong>. All new website requests and live sessions are put on hold. We'll be back online March 17, 2025. We apologize for any inconvenience this may cause.
+             We're away from the desk between <strong>March 6  - March 16, 2025</strong>. 
+             <br>
+             All new website requests and live sessions are put on hold. 
+             <br>
+             We'll be back online March 17, 2025. We apologize for any inconvenience this may cause.
             </p>
+
+        <br>
+
     </header>
 
 
@@ -1165,10 +1168,11 @@
             Timelines and Requests <span class="spoiler-icon">▼</span>
             <div class="spoiler-content">
 
-                <p>Typically, website requests are completed within 2 weeks for existing websites, and 3 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
-                </p>
+                <p style="text-align: left">Typically, website requests are completed within 2 weeks for existing websites, and 3 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
 
-                <p>
+                <br>
+                <br>
+
                     The Current Timeline for Website Requests is live below and is dependent on our current workload.
                 </p>
 
@@ -1199,6 +1203,10 @@
 
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About Us</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="portal.html">Client Portal</a>
                 </li>
 
                 <li class="nav-item">
