--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1206,6 +1206,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="portal.html">Client Portal</a>
+                </li>
+
+                <li class="nav-item">
                   <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
                 </li>
 
