--- a/about.html
+++ b/about.html
@@ -1229,6 +1229,10 @@
                 </li>
 
                 <li class="nav-item">
+                  <a class="nav-link" href="portal.html">Client Portal</a>
+                </li>
+
+                <li class="nav-item">
                   <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
                 </li>
 
