--- a/consultation.html
+++ b/consultation.html
@@ -1309,6 +1309,11 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="portal.html">Client Portal</a>
+                </li>
+  
+
+                <li class="nav-item">
                   <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
                 </li>
 
