--- a/contact-us.html
+++ b/contact-us.html
@@ -1292,6 +1292,10 @@
                 </li>
 
                 <li class="nav-item">
+                  <a class="nav-link" href="portal.html">Client Portal</a>
+                </li>
+
+                <li class="nav-item">
                   <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
                 </li>
 
