--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
 
 
 
-        <p id="offer-header" style="color: white; font-size: 14px;"><strong>Don't Rely on Luck! 🍀</strong>
+        <p id="offer-header" style="color: white; font-size: 14px; margin: 10px;"><strong>Don't Rely on Luck! 🍀</strong>
 
             <br>
        Get a stunning website & 15% OFF any of our packages using code <u>STPATTY15</u> at checkout. 
