--- a/contact-us.html
+++ b/contact-us.html
@@ -1242,6 +1242,19 @@
 
 <body class="page-website-setup">
 
+    <header style="background-color: #ea10106d !important; margin-bottom: -40px; margin-top: 85px;" class="page-website-setup-header">
+
+
+
+        <p style="color: white; font-size: 15px;"><strong>Delayed Response Time</strong>
+            <br>
+           We're experiencing a high volume of requests. Please allow extra time for a response. Thank you for your patience. 
+        </p>
+
+        <br>
+
+    </header>
+
     
 
     <header id="header-services">
@@ -1324,17 +1337,17 @@
             <label>
                 Subject: *
                 <select name="subject" required>
-                    <option value="Website Request">Website Request</option>
-                    <option value="General Inquiry">General Inquiry</option>
-                    <option value="Payment">Payments</option>
-                    <option value="Feedback">Feedback</option>
-                    <option value="TOS Privacy Policy">TOS & Privacy Policy Inquiry</option>
+                    <option value="Website Request">Website Change</option>
+                    <option value="account-payments">Account & Payments</option>
+                    <option value="feedback">Feedback</option>
+                    <option value="other">Other</option>
+                    <option value="co-founder-app">Co-Founder Application</option>
                 </select>
             </label>
 
             <label>
                 How can we help: *
-                <textarea name="message" required></textarea>
+                <textarea style="height: 75px;"name="message" required></textarea>
             </label>
 
             <p id="notice">Upload images <strong>after</strong> writing your request. Don't remove the link that's added automatically; we'll need it to access your attachments.</p>
