--- a/index.html
+++ b/index.html
@@ -1809,10 +1809,10 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const questions = [
-            "Fancy a new website? Welcome!",
+            "Fancy a new website?",
             "Domains add professionalism. Do you have one?",
             "Need a website but don't know where to start?",
-            "Hourly rates? Forget it. One package starting at $799.",
+            "Your website is your online home.",
             "Welcome to WebEaze!",
             "Need a website? We're here to help.",
             "Web design made easy.",
