--- a/portal.html
+++ b/portal.html
@@ -1152,8 +1152,8 @@
         <div class="spoiler" onclick="toggleSpoiler(this)">
             Your Next Steps <span class="spoiler-icon">▼</span>
             <div class="spoiler-content">
-                <ol style="text-align: left">
-                    <li>Bookmark this page for easy access to anything WebEaze</li>
+                <ol style="text-align: left; font-size: 12px;">
+                    <li>Bookmark this page for easy access to anything WebEaze.</li>
                     <li>Schedule a live session with us <a href="https://calendly.com/webeaze/session-full-setups"><strong>here</strong></a>, so we can fully understand what you're looking for. </li>
                     <li>Return to this page any time you need assistance with your website. </li>
                 </ol>
@@ -1164,7 +1164,7 @@
             Timelines and Requests <span class="spoiler-icon">▼</span>
             <div class="spoiler-content">
 
-                <p style="text-align: left">Typically, website requests are completed within 2 weeks for existing websites, and 3 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
+                <p style="text-align: left; font-size: 13px;">Typically, website requests are completed within 2 weeks for existing websites, and 3 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
 
                 <br>
                 <br>
@@ -1244,7 +1244,7 @@
 
 
 
-            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 9 weeks</strong></p>
+            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 11 weeks</strong></p>
             <p>Updates: Emailed from support@webeaze.io</p>
 
             <br>
@@ -1299,7 +1299,7 @@
 
             <h1><strong>🖥️ Existing Websites</strong></h1>
             
-            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 8 weeks</strong></p>
+            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 2 weeks</strong></p>
             <p>Updates: Emailed from support@webeaze.io</p>
             <p>We work on your website on an ongoing basis. <br>
             If you need an immediate change, please schedule a live session. </p>
@@ -1321,12 +1321,12 @@
                 Website link and hosting costs?<span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
 
-                    <p style="text-align: left;"><strong>Growth package clients</strong>: We'll cover up to $124.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once. 
+                    <p style="text-align: left;font-size: 12px; "><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once. 
 
                         <br>
                         <br>
         
-                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once. 
+                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and can cover up to 50% of your Elite package cost. 
 
                         <br>
                         <br>
