Updates to footer

--- a/about.html
+++ b/about.html
@@ -1406,10 +1406,14 @@
     <br>
 
     <p>
-        <a href="https://billyjoinville.me/terms">Terms of Service & Privacy Policy</a>
+        <a href="about.html">About WebEaze (current)</a>
     </p>
     <p>
-        <a href="refund-policy.html">Refund Policy</a>
+        <a href="portal.html">Client Portal</a>
+    </p>
+
+    <p>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
 
     <p><a href="site-map.html">Site Map</a></p>
