--- a/contact-us.html
+++ b/contact-us.html
@@ -1341,12 +1341,12 @@
                     <option value="account-payments">Account & Payments</option>
                     <option value="feedback">Feedback</option>
                     <option value="other">Other</option>
-                    <option value="co-founder-app">Co-Founder Application</option>
+                  
                 </select>
             </label>
 
             <label>
-                How can we help: *
+                How can we help? *
                 <textarea style="height: 75px;"name="message" required></textarea>
             </label>
 
@@ -1391,15 +1391,17 @@
     <br>
 
     <p>
-        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
+        <a href="about.html">About WebEaze</a>
     </p>
     <p>
         <a href="portal.html">Client Portal</a>
     </p>
 
     <p>
-        <a href="refund-policy.html">Refund Policy</a>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
+
+    <p><a href="site-map.html">Site Map</a></p>
 
     <p><a href="contact-us.html">Back to Top</a></p>
 
