--- a/index.html
+++ b/index.html
@@ -1539,10 +1539,13 @@
 
 
 
-            <h1 id="setup-packages-heading"><strong>Choose your vibe</strong></h1>
+            <h1 id="setup-packages-heading"><strong>Choose your package</strong></h1>
             <p id="intro-services-html-next2">
-                One package. No hidden fees or hourly rates. 
+                Just one package with no hidden fees or hourly rates. 
+
             </p>
+
+         
 
             <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
 
@@ -1663,11 +1666,16 @@
 
     <br>
 
+   
     <p>
-        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
+        <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="refund-policy.html">Refund Policy</a>
+        <a href="portal.html">Client Portal</a>
+    </p>
+
+    <p>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
 
     <p><a href="site-map.html">Site Map</a></p>
