--- a/consultation.html
+++ b/consultation.html
@@ -1420,17 +1420,19 @@
     <br>
 
     <p>
-        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
+        <a href="about.html">About WebEaze</a>
     </p>
     <p>
         <a href="portal.html">Client Portal</a>
     </p>
 
     <p>
-        <a href="refund-policy.html">Refund Policy</a>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
 
-    <p><a href="contact-us.html">Back to Top</a></p>
+    <p><a href="site-map.html">Site Map</a></p>
+
+    <p><a href="consultation.html">Back to Top</a></p>
 
     <br>
  
