--- a/site-map.html
+++ b/site-map.html
@@ -1267,13 +1267,17 @@
     <br>
 
     <p>
-        <a href="https://billyjoinville.me/terms">Terms of Service & Privacy Policy</a>
+        <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="refund-policy.html">Refund Policy</a>
+        <a href="portal.html">Client Portal</a>
     </p>
 
-    <p><a href="site-map.html">Site Map</a></p>
+    <p>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
+    </p>
+
+    <p><a href="site-map.html">Site Map (current)</a></p>
 
     <p><a href="site-map.html">Back to Top</a></p>
 
