--- a/portal.html
+++ b/portal.html
@@ -1107,7 +1107,8 @@
 
         <p style="color: white; font-size: 12px;"><strong>Delayed Website Work</strong>
             <br>
-             We're unavailable until end of day on <strong>March 16, 2025</strong> and will return on March 17, 2025. Thanks for your patience.
+             We're unavailable until end of day on <strong>March 16, 2025</strong> and will return on March 17, 2025. 
+             <br>Thanks for your patience.
             </p>
 
         <br>
