--- a/portal.html
+++ b/portal.html
@@ -1278,12 +1278,12 @@
                 Website link and hosting costs?<span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
 
-                    <p style="text-align: left;"><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and is not available for the monthly Growth package subscription.
+                    <p style="text-align: left; font-size: 13px;"><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and is not available for the monthly Growth package subscription.
 
                         <br>
                         <br>
         
-                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once. 
+                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and can cover up to 50% of your Elite package cost. 
 
                         <br>
                         <br>
@@ -1333,7 +1333,7 @@
                 Website link and hosting costs?<span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
 
-                    <p style="text-align: left;font-size: 12px; "><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once. 
+                    <p style="text-align: left;font-size: 12px; "><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences.  It is only available once, and is not available for the monthly Growth package subscription.
 
                         <br>
                         <br>
