--- a/portal.html
+++ b/portal.html
@@ -1256,7 +1256,7 @@
 
 
 
-            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 11 weeks</strong></p>
+            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 4 weeks</strong></p>
             <p>Updates: Emailed from support@webeaze.io</p>
 
             <br>
@@ -1311,7 +1311,7 @@
 
             <h1><strong>🖥️ Existing Websites</strong></h1>
             
-            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 2 weeks</strong></p>
+            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: < 1 week</strong></p>
             <p>Updates: Emailed from support@webeaze.io</p>
             <p>We work on your website on an ongoing basis. <br>
             If you need an immediate change, please schedule a live session. </p>
