--- a/faq.html
+++ b/faq.html
@@ -1254,7 +1254,7 @@
      
             <div class="faq-item">
                 <h3 class="faq-question">When can you finish my website? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> For new websites, we aim to complete your website within 1-2 weeks, depending on the complexity of the project. For existing websites, we'll work with you to find a timeline that works. We'll keep you updated on our progress and let you know when your website is ready to go live.
+                <p class="faq-answer"> For new websites, we aim to complete your website within 1-2 weeks, depending on the complexity of the project. For existing websites, we'll provide a support schedule for effortless maintenance and communication. We'll keep you updated on our progress and let you know when your website is ready to go live.
                 </p>
             </div>
 
@@ -1269,7 +1269,7 @@
 
             <div class="faq-item">
                 <h3 class="faq-question"> How much support do I get? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> We offer 12 months of support with any package you purchase. This includes updates, maintenance, and troubleshooting. We're here to help, so you can reach out to us anytime you need assistance.
+                <p class="faq-answer">  We offer 12 months of support with any package you purchase. With our monthly subscription, we support you as long as your subscription is active. This includes updates, maintenance, and troubleshooting. We're here to help, so you can reach out to us anytime you need assistance.
                 </p>
             </div>
 
@@ -1291,7 +1291,7 @@
 
             <div class="faq-item">
                 <h3 class="faq-question">Do I have to buy a website link myself?<span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> It depends on the package you choose and the cost of your website link (domain). We cover up to 10% of the original package price (Growth) for your domain, and we cover all domain costs for the Elite package. We'll help you find the right domain for your website and make sure it's set up correctly.
+                <p class="faq-answer"> It depends on the package you choose and the cost of your website link (domain). For our Growth package, we'll cover up to 10% of the original package price for your domain and hosting costs. For our Elite package, we'll cover all domain and hosting costs. We'll help you find the right domain for your website and make sure it's set up correctly.
                 </p>
             </div>
 
