--- a/portal.html
+++ b/portal.html
@@ -1265,7 +1265,7 @@
                 Need Help? <span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
                     <ul>
-                        <li><a href="contact-us.html"><u>Submit a Website Change</u></a></li>
+                        <li><a href="website-request.html"><u>Submit a Website Change</u></a></li>
                         <li><u><a href="https://calendly.com/webeaze/session-full-setups">Schedule Live Session</a></u></li>
                         <li><a href="#track-request">Track Your Request (coming soon!)</a></li>
                     </ul>
@@ -1322,7 +1322,7 @@
                 Need Help? <span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
                     <ul>
-                        <li><a href="contact-us.html"><u>Submit a Website Change</u></a></li>
+                        <li><a href="website-request.html"><u>Submit a Website Change</u></a></li>
                         <li><u><a href="https://calendly.com/webeaze/session-full-setups">Schedule Live Session</a></u></li>
                         <li><a href="#track-request">Track Your Request (coming soon!)</a></li>
                     </ul>
