--- a/contact-us.html
+++ b/contact-us.html
@@ -1242,7 +1242,7 @@
 
 <body class="page-website-setup">
 
-    <header style="background-color: #ea10106d !important; margin-bottom: -40px; margin-top: 85px;" class="page-website-setup-header">
+    <!-- <header style="background-color: #ea10106d !important; margin-bottom: -40px; margin-top: 85px;" class="page-website-setup-header">
 
 
 
@@ -1253,7 +1253,7 @@
 
         <br>
 
-    </header>
+    </header> -->
 
     
 
