--- a/portal.html
+++ b/portal.html
@@ -1101,17 +1101,16 @@
 
 
     
-    <header style="background-color: #bb0b0bca !important; margin-bottom: -40px; margin-top: 85px;" class="page-website-setup-header">
+    <header style="background-color: #0e6a0bca !important; margin-bottom: -30px; margin-top: 85px;" class="page-website-setup-header">
 
 
 
-        <p style="color: white; font-size: 12px;"><strong>Delayed Website Work</strong>
+        <p style="color: white; font-size: 12px;"><strong>Extended Hours</strong>
             <br>
-             We're unavailable until end of day on <strong>March 16, 2025</strong> and will return on March 17, 2025. 
-             <br>Thanks for your patience.
+            From March 17-21, we're available from 8am-8pm ET. Please allow extra time for responses.
             </p>
 
-        <br>
+        
 
     </header>
 
