--- a/index.html
+++ b/index.html
@@ -1313,6 +1313,7 @@
 
             <h1><strong>Don't take our word for it</strong></h1>
 
+            <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush, who connects businesses with agencies who are fond of our work. 
         
 
                 
