--- a/index.html
+++ b/index.html
@@ -1313,10 +1313,10 @@
 
             <h1><strong>Don't take our word for it</strong></h1>
 
-            <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush, who connects businesses with agencies who are fond of our work. 
+            <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush as a verified agency.
 
                 <br>
-                See some of our top clients and work that we've completed. </p>
+                See some of our top clients and work that we've completed. If we've done a great job, we appreciate your honest review.  </p>
 
             <br>
 
