--- a/portal.html
+++ b/portal.html
@@ -1110,6 +1110,11 @@
             From March 17-21, we're available from 8am-8pm ET. Please allow extra time for responses.
             </p>
 
+            <p style="color: white; font-size: 12px;"><strong>Important Change for Existing Clients</strong>
+                <br>
+                An important change to website suppprt will be in effect starting April 18, 2025. Click <a href=" "><strong>here</strong></a> to learn more.
+                </p>
+
         
 
     </header>
@@ -1277,12 +1282,12 @@
                 Website link and hosting costs?<span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
 
-                    <p style="text-align: left; font-size: 13px;"><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and is not available for the monthly Growth package subscription.
+                    <p style="text-align: left; font-size: 13px;"><strong>Growth package clients</strong>: We'll cover up to $50 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once.
 
                         <br>
                         <br>
         
-                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and can cover up to 50% of your Elite package cost. 
+                        <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. It is only available once, and can cover up to 50% of your Elite package cost.
 
                         <br>
                         <br>
