Added Blog, Updated Portal

--- a/portal.html
+++ b/portal.html
@@ -1112,7 +1112,9 @@
 
             <p style="color: white; font-size: 12px;"><strong>Important Change for Existing Clients</strong>
                 <br>
-                An important change to website suppprt will be in effect starting April 18, 2025. Click <a href=" "><strong>here</strong></a> to learn more.
+                An important change to website suppprt will be in effect starting April 18, 2025. 
+                <br>
+                <a href="https://open.substack.com/pub/webeaze/p/important-changes-to-website-support?r=5ebxqk&utm_campaign=post&utm_medium=web&showWelcomeOnShare=false"><strong>Learn more</strong></a>.
                 </p>
 
         
