Updates to Site Map and Portal

--- a/portal.html
+++ b/portal.html
@@ -1112,9 +1112,9 @@
 
             <p style="color: white; font-size: 12px;"><strong>Important Change for Existing Clients</strong>
                 <br>
-                An important change to website suppprt will be in effect starting April 18, 2025. 
+                An important change to website support will be in effect starting April 18, 2025. 
                 <br>
-                <a href="https://open.substack.com/pub/webeaze/p/important-changes-to-website-support?r=5ebxqk&utm_campaign=post&utm_medium=web&showWelcomeOnShare=false"><strong>Learn more</strong></a>.
+                <a href="https://open.substack.com/pub/webeaze/p/important-changes-to-website-support?r=5ebxqk&utm_campaign=post&utm_medium=web&showWelcomeOnShare=false" target="_blank"><strong>Learn more</strong></a>.
                 </p>
 
         
