--- a/site-map.html
+++ b/site-map.html
@@ -1222,6 +1222,7 @@
                 <li><a href="portal.html">Client Portal</a></li>
                 <li><a href="faq.html">FAQ's</a></li>
                 <li><a href="website-request.html">Submit A Website Request</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 
                 <li><a href="refund-policy.html">Refund Policy</a></li>
 
