--- a/blog.html
+++ b/blog.html
@@ -1174,6 +1174,7 @@
         margin: 0 auto;
         width: 100%;
         margin-bottom: 20px;
+        
     }
 
 
@@ -1193,7 +1194,7 @@
             <br>
             <br>
             <h1 id="random-question"></h1>
-            <p id="intro-services-html-next1" style="font-size: 19px; margin: 40px; ">Stay up to date witb the latest at WebEaze. Here, we post our latest updates, news, and more. </p>
+            <p id="intro-services-html-next1" style="font-size: 19px; margin: 40px; ">Stay up to date with the latest at WebEaze. Here, we post our latest updates, news, and more. </p>
             <br>
         </p>
 
@@ -1259,7 +1260,7 @@
 
     <main id="content">
 
-        <div class="substack-post-embed" ><p lang="en">Important: Changes to Website Support included with your Web Setup Package by WebEaze</p><p>Thank you for being one of the first clients to get our business up and running. This post will share an important change that will take place on April 18, 2025.</p><a data-post-link href="https://webeaze.substack.com/p/important-changes-to-website-support">Read on Substack</a></div>
+        <div class="substack-post-embed" ><p lang="en">Important: Changes to Website Support included with your Web Setup Package by WebEaze</p><p>Thank you for being one of the first clients to get our business up and running. This post will share an important change that will take place on April 18, 2025.</p><a data-post-link href="https://webeaze.substack.com/p/important-changes-to-website-support">Read More</a></div>
 
     <br>
     <br>
