Updates to index

--- a/index.html
+++ b/index.html
@@ -1315,9 +1315,7 @@
             <h1><strong>Don't take our word for it</strong></h1>
 
             <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush as a verified agency.
-
-                <br>
-                See some of our top clients and work that we've completed. If we've done a great job, we appreciate your honest review.  </p>
+                 </p>
 
             <br>
 
@@ -1325,6 +1323,18 @@
             <a href="https://www.designrush.com/agency/profile/webeaze" target="_blank">
                 <img src="images/designrush-profile.svg" alt="WebEaze verified agency on DesignRush">
             </a>
+
+            <br>
+            <br>
+
+            <p style="color: white; font-size: 16px; text-align: center;">See what our clients have to say.</p>
+            <br>
+
+            <a href="https://www.designrush.com/agency/profile/webeaze" target="_blank">
+                <img src="images/Read_our_review_v3.png" alt="Read our reviews">
+            </a>
+
+
             
             <br>
           
