--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
 
             <h1><strong>Don't take our word for it</strong></h1>
 
-            <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush as a verified agency.
+            <p style="color: white; font-size: 16px; text-align: center;">We're proud to be listed on DesignRush as a verified agency. See what our clients have to say!
                  </p>
 
             <br>
@@ -1327,12 +1327,10 @@
             <br>
             <br>
 
-            <p style="color: white; font-size: 16px; text-align: center;">See what our clients have to say.</p>
+            <p style="color: white; font-size: 16px; text-align: center;">We'd love to hear from our existing clients!</p>
             <br>
 
-            <a href="https://www.designrush.com/submit/review/webeaze" target="_blank">
-                <img src="images/Read_our_review_v3.png" alt="Read our reviews">
-            </a>
+            <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script><div data-designrush-widget data-agency-id="86840" data-style="dark"></div><noscript><a href="https://www.designrush.com/agency/profile/webeaze#reviews" target="_blank">REVIEW US ON DESIGNRUSH</a></noscript>
 
 
             
