--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
             <br>
             <br>
 
-            <p style="color: white; font-size: 16px; text-align: center;">We'd love to hear from our existing clients!</p>
+            <p style="color: white; font-size: 16px; text-align: center;">Timely support? Highly visited website? Tell us about it!</p>
             <br>
 
             <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script><div data-designrush-widget data-agency-id="86840" data-style="dark"></div><noscript><a href="https://www.designrush.com/agency/profile/webeaze#reviews" target="_blank">REVIEW US ON DESIGNRUSH</a></noscript>
