--- a/index.html
+++ b/index.html
@@ -1186,10 +1186,10 @@
 }
 
 .typing-text::after {
-    content: "👨‍💻";
+    content: "|";
     
     display: inline-block;
-    animation: blink 0.7s infinite;
+    animation: blink 0.7s steps(1) 3, disappear 30s ease-in-out 2.1s forwards;
     
 }
 
@@ -1204,6 +1204,10 @@
 
 @keyframes blink {
     50% { opacity: 0; }
+}
+
+@keyframes disappear {
+    to { opacity: 0; }
 }
 
 
@@ -1251,7 +1255,7 @@
 
         <h2 id="intro-services-html-next1">
 
-            Welcome to WebEaze. We create custom, heartfelt websites with dedicated support and smart optimization—all for one low price. The best part: no hourly rates or gimmicks.
+            Welcome to WebEaze. We do things quite eazily here. Ongoing Support from the start. No hourly rates. Let's make your website stand out.
         </h2>
 
 
